--- a/css/styles.css
+++ b/css/styles.css
@@ -192,3 +192,71 @@ button:focus {
 .imagenes img:hover {
   transform: scale(1.2); /* zoom en hover */
 }
+
+/* Slider Carusel 2 Imagenes */
+.container-carousel2 {
+    position: relative;
+    width: 1400px;
+    height: 800px;
+    background-color: #e0e0e0;
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.66);
+    border-radius: 15px;
+    overflow: hidden;
+  
+}
+
+.container-carousel2:hover {
+    transform: scale(1.1);
+  
+}
+
+.carruseles2 {
+    width: 800%; /* Ajustar Imagen */
+    height: 100%;
+    display: flex;
+
+}
+
+.slider-section2 {
+    width: calc(100% / 8);
+    height: 100%;
+}
+
+.slider-section2 img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 15px;
+}
+
+.btn-left2,
+.btn-right2 {
+    display: flex;
+    position: absolute;
+    top: 50%;
+    font-size: 1.5rem;
+    background-color: #07070781;
+    border-radius: 50%;
+    padding: 5px;
+    font-weight: 600;
+    cursor: pointer;
+    color: #ffffff81;
+    transform: translate(0,-50%);
+    transition: .5s ease;
+    user-select: none;
+}
+
+.btn-left2:hover,
+.btn-right2:hover {
+    background-color: #333333d4;
+    color: #fff;
+}
+
+.btn-left2 {
+    left: 10px;
+}
+
+.btn-right2 {
+    right: 10px;
+}
+/* ************** */
